add btn utility class and refactor

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <button
               id="share-btn"
-              class="card__share-btn bg-blue-50 grid center"
+              class="btn card__share-btn bg-blue-50 grid center"
             >
               <span class="sr-only">Share</span>
               <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
@@ -95,7 +95,7 @@
 
           <button
             id="hide-popup"
-            class="card__popup-btn bg-blue-400 grid center"
+            class="btn card__popup-btn bg-blue-400 grid center"
           >
             <span class="sr-only">Hide share menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
